--- a/engineering.html
+++ b/engineering.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/engineering.css">
+	<link rel="stylesheet" type="text/css" href="engineering.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -21,7 +21,7 @@
     		<li data-target="Myslide" data-slide-to="2"></li>
     	</ol>-->
     	<div class="carousel-inner" role="list-box">
-    		<div class="item active" style="background-image:linear-gradient(to left bottom, rgba(0,0,154,1), rgba(0,0,0,.1) ), url(img/2.JPG)">
+    		<div class="item active" style="background-image:linear-gradient(to left bottom, rgba(0,0,154,1), rgba(0,0,0,.1) ), url(2.JPG)">
     			
     			<div class="carousel-caption">
     				<h1>Course <span class="carouselheader">Land</span></h1>
@@ -81,28 +81,28 @@
 		</center>
 		<div class="row">
 			<div class="col-md-6 col-lg-3 col-sm-6">
-				<center><img src="img/berg.jpg"></center>
+				<center><img src="berg.jpg"></center>
 				<center><h1><span class="carouselheader">Science</span></h1></center>
 				<p>
 					Web Store Design Services are websites that we build to your specifications, including eCommerce (shopping cart) functionality. There are a variety of Web Store plans to choose from that allow you to dictate many aspects of your site, such as layout, color schemes, and organization <span><button><a href="">Take Course</a></button></span>
 				</p>
 			</div>
 			<div class="col-md-6 col-lg-3 col-sm-6">
-				<center><img src="img/berg.jpg"></center>
+				<center><img src="berg.jpg"></center>
 				<center><h1><span class="carouselheader">Technology</span></h1></center>
 				<p>
 					Web Store Design Services are websites that we build to your specifications, including eCommerce (shopping cart) functionality. There are a variety of Web Store plans to choose from that allow you to dictate many aspects of your site, such as layout, color schemes, and organization <span><button><a href="">Take Course</a></button></span>
 				</p>
 			</div>
 			<div class="col-md-6 col-lg-3 col-sm-6">
-				<center><img src="img/berg.jpg"></center>
+				<center><img src="berg.jpg"></center>
 				<center><h1><span class="carouselheader">Engineering</span></h1></center>
 				<p>
 					Web Store Design Services are websites that we build to your specifications, including eCommerce (shopping cart) functionality. There are a variety of Web Store plans to choose from that allow you to dictate many aspects of your site, such as layout, color schemes, and organization <span><button><a href="">Take Course</a></button></span>
 				</p>
 			</div>
 			<div class="col-md-6 col-lg-3 col-sm-6">
-				<center><img src="img/berg.jpg"></center>
+				<center><img src="berg.jpg"></center>
 				<center><h1><span class="carouselheader">Mathematics</span></h1></center>
 				<p>
 					Web Store Design Services are websites that we build to your specifications, including eCommerce (shopping cart) functionality. There are a variety of Web Store plans to choose from that allow you to dictate many aspects of your site, such as layout, color schemes, and organization <span><button><a href="">Take Course</a></button></span>
@@ -115,17 +115,17 @@
 		<hr style="border-color:orange; width:70%; border:3px solid orange; border-radius:10px;">
        <div class="row">
        	<div class="col-md-4">
-       		<center><img src="img/berg.jpg" class="imgbd"></center>
+       		<center><img src="berg.jpg" class="imgbd"></center>
        		<center><h1>Helen Ogbogu</h1></center>
        		<center><p>Founder Tehchville/phyton dev</p></center>
        	</div>
        	<div class="col-md-4">
-       		<center><img src="img/berg.jpg" class="imgbd"></center>
+       		<center><img src="berg.jpg" class="imgbd"></center>
        		<center><h1>Helen Ogbogu</h1></center>
        		<center><p>Founder Tehchville/phyton dev</p></center>
        	</div>
        	<div class="col-md-4">
-       		<center><img src="img/berg.jpg" class="imgbd"></center>
+       		<center><img src="berg.jpg" class="imgbd"></center>
        		<center><h1>Helen Ogbogu</h1></center>
        		<center><p>Founder Tehchville/phyton dev</p></center>
        	</div>
